tests/ui/abi3_inheritance.stderr
error[E0277]: pyclass `PyException` cannot be subclassed
  --> tests/ui/abi3_inheritance.rs:4:1
   |
 4 | #[pyclass(extends=PyException)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=PyException)]`
   |
   = help: the trait `pyo3::impl_::pyclass::PyClassBaseType` is not implemented for `PyException`
   = note: `PyException` must have `#[pyclass(subclass)]` to be eligible for subclassing
   = note: subclassing native types requires Python >= 3.12 when using the `abi3` feature
help: the trait `pyo3::impl_::pyclass::PyClassBaseType` is implemented for `PyAny`
 --> src/types/any.rs
  |
  | impl crate::impl_::pyclass::PyClassBaseType for PyAny {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: pyclass `PyException` cannot be subclassed
   --> tests/ui/abi3_inheritance.rs:4:19
    |
  4 | #[pyclass(extends=PyException)]
    |                   ^^^^^^^^^^^ required for `#[pyclass(extends=PyException)]`
    |
    = help: the trait `pyo3::impl_::pyclass::PyClassBaseType` is not implemented for `PyException`
    = note: `PyException` must have `#[pyclass(subclass)]` to be eligible for subclassing
    = note: subclassing native types requires Python >= 3.12 when using the `abi3` feature
help: the trait `pyo3::impl_::pyclass::PyClassBaseType` is implemented for `PyAny`
 --> src/types/any.rs
  |
  | impl crate::impl_::pyclass::PyClassBaseType for PyAny {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `pyo3::impl_::pyclass::PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
